# cinephile

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  docker-compose.yml
client/: .npmrc  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: HeaderNav.tsx  SearchCard.tsx
doc/: openapi.yaml
doc/migrations/: 20260401204542_create_users_table.sql
server/: .env.example  Cargo.toml
server/src/: domain.rs  handlers.rs  infrastructure.rs  lib.rs  main.rs  usecases.rs
server/src/domain/: entities.rs  errors.rs
server/src/domain/entities/: auth_user.rs  genre.rs  movie.rs  user.rs
server/src/handlers/: base_response.rs  mod.rs  movie.rs  schema.rs  search.rs  sign_in.rs  sign_up.rs
server/src/handlers/auth/: mod.rs  schema.rs  sign_in.rs  sign_up.rs
server/src/handlers/schema/: mod.rs  sign_in.rs
server/src/infrastructure/: external.rs  mod.rs  security.rs
server/src/infrastructure/persistence/postgres/: user.rs
server/src/infrastructure/security/: password.rs  token.rs
server/src/infrastructure/ui/: router.rs
server/src/middleware/: auth.rs
server/src/usecases/: dto.rs  interactor.rs  mod.rs  port.rs  security.rs
server/src/usecases/dto/: movie.rs  search.rs  sign_in.rs  sign_up.rs
server/src/usecases/gateway/: tmdb.rs
server/src/usecases/interactor/: movie.rs  search.rs  sign_in.rs  sign_up.rs
server/src/usecases/port/: movie.rs  search.rs  sign_in.rs  sign_up.rs
server/src/usecases/repository/: user.rs
server/src/usecases/security/: password.rs  token.rs
(+16 files in other folders)
